--- a/app/views/colleges/index.html.erb
+++ b/app/views/colleges/index.html.erb
@@ -1,7 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Colleges</h1>
-
+<%= form_tag colleges_path, :method => 'get' do %>
+    <%= text_field_tag :search, params[:search]%>
+    <%= submit_tag "search" %>
+  <% end %>
 <table>
   <thead>
     <tr>
