--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -11,6 +11,7 @@
       <th>Physics</th>
       <th>Chemistry</th>
       <th>Year</th>
+      <th>Colleg Name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,6 +25,7 @@
         <td><%= student.physics %></td>
         <td><%= student.chemistry %></td>
         <td><%= student.year %></td>
+        <td><%= student.college.name %></td>
         <td><%= link_to 'Show', student %></td>
         <td><%= link_to 'Edit', edit_student_path(student) %></td>
         <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
