--- a/app/views/displays/form.html.erb
+++ b/app/views/displays/form.html.erb
@@ -1,16 +1,18 @@
 <%= form_tag(action: "form", method: "get") do %>
-  <%= label_tag(:q, "Group by:") %>
-  <%= text_field_tag(:q) %>
-  <%= label_tag(:s, "SORT BY: maths/physics/chemistry") %>
-  <%= text_field_tag(:s) %>
-  <%= label_tag(:d, "Display fields: maths,physics,chemistry") %>
-  <%= text_field_tag(:d) %>
-  <%= label_tag(:y, "Year: 2015/2016") %>
-  <%= text_field_tag(:y) %>
-  <%= label_tag(:sc, "Should compare? true/false") %>
-  <%= text_field_tag(:sc) %>
-  <%= label_tag(:t, "Should total? true/false") %>
-  <%= text_field_tag(:t) %>
+  <%= label_tag(:input_group_by, "Group by:") %>
+  <%= text_field_tag(:input_group_by) %>
+  <%= label_tag(:input_sort_by, "SORT BY: maths/physics/chemistry") %>
+  <%= text_field_tag(:input_sort_by ) %>
+  <%= label_tag(:input_display_arr, "Display fields: maths,physics,chemistry") %>
+  <%= text_field_tag(:input_display_arr) %>
+  <%= label_tag(:year_1, "Year 1: ") %>
+  <%= text_field_tag(:year_1) %>
+  <%= label_tag(:year_2, "Year 2: ") %>
+  <%= text_field_tag(:year_2) %>
+  <%= label_tag(:should_compare, "Should compare? true/false") %>
+  <%= text_field_tag(:should_compare) %>
+  <%= label_tag(:should_total, "Should total? true/false") %>
+  <%= text_field_tag(:should_total) %>
 <br>
 
   <%= submit_tag("Filter") %>
